# halo2-zk-email

./: Cargo.toml  README.md
benches/: email_verify.rs
src/: config_params.rs  helpers.rs  lib.rs
